--- a/pair.html
+++ b/pair.html
@@ -40,7 +40,7 @@
       height: 360px;
       padding: 20px;
       text-align: center;
-      background: url("https://files.catbox.moe/ig9w4q.jpg") no-repeat center/cover;
+      background: url("https://files.catbox.moe/pvc6az.jpg") no-repeat center/cover;
       background-size: cover;
       border-radius: 12px;
       box-shadow: 0 0 40px rgba(0, 128, 255, 0.7);
@@ -196,18 +196,18 @@
 </head>
 <body>
   <video autoplay muted loop>
-    <source src="https://files.catbox.moe/dvc8y2.mp4" type="video/mp4">
+    <source src="https://files.catbox.moe/9tnx5e.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
   <div class="container">
     <div class="box" id="box">
-      <h3 class="centered-text">𝑺𝑬𝑺𝑺𝑰𝑶𝑵 𝑺𝑪𝑨𝑵𝑵𝑬𝑹</h3>
+      <h3 class="centered-text">session pair code </h3>
       <h6 class="centered-text">𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑾𝒉𝒂𝒕𝒔𝒂𝒑𝒑 𝑵𝒖𝒎𝒃𝒆𝒓 𝑾𝒊𝒕𝒉 𝑪𝒐𝒖𝒏𝒕𝒓𝒚 𝑪𝒐𝒅𝒆 𝑾𝒊𝒕𝒉𝒐𝒖𝒕 (+).</h6>
-      <h6 class="centered-text">DULLAH-MD</h6>
+      <h6 class="centered-text">Njabulo Jb</h6>
 
       <div class="input-container">
-        <input placeholder="Eg 255xxxxxx" type="number" id="number" name="number">
+        <input placeholder="Eg 267xxxxxx" type="number" id="number" name="number">
         <button id="submit">Enter</button>
       </div>
 
@@ -240,7 +240,7 @@
       </div>
 
       <div class="instructions">
-        <h3><i class="fas fa-info-circle"></i> How to use Dml-Xmd Pro:</h3>
+        <h3><i class="fas fa-info-circle"></i> How to use Njabulo Jb Pro:</h3>
         <ol>
           <li>Open your phone's camera or QR scanner app</li>
           <li>Point your camera at the QR code above</li>
