--- a/pair.html
+++ b/pair.html
@@ -40,7 +40,7 @@
       height: 360px;
       padding: 20px;
       text-align: center;
-      background: url("https://files.catbox.moe/pvc6az.jpg") no-repeat center/cover;
+      background: url("https://files.catbox.moe/miul66.jpg") no-repeat center/cover;
       background-size: cover;
       border-radius: 12px;
       box-shadow: 0 0 40px rgba(0, 128, 255, 0.7);
@@ -196,14 +196,14 @@
 </head>
 <body>
   <video autoplay muted loop>
-    <source src="https://files.catbox.moe/9tnx5e.mp4" type="video/mp4">
+    <source src="https://files.catbox.moe/jax3eg.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
   <div class="container">
     <div class="box" id="box">
       <h3 class="centered-text">session pair code </h3>
-      <h6 class="centered-text">𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑾𝒉𝒂𝒕𝒔𝒂𝒑𝒑 𝑵𝒖𝒎𝒃𝒆𝒓 𝑾𝒊𝒕𝒉 𝑪𝒐𝒖𝒏𝒕𝒓𝒚 𝑪𝒐𝒅𝒆 𝑾𝒊𝒕𝒉𝒐𝒖𝒕 (+).</h6>
+      <h6 class="centered-text">. (+).</h6>
       <h6 class="centered-text">Njabulo Jb</h6>
 
       <div class="input-container">
@@ -216,8 +216,8 @@
       <main id="pair"></main>
 
       <div class="actions">
-        <button class="btn btn-primary" id="copy-btn" onclick="copyCode()">Copy Code</button>
-        <button class="btn btn-secondary" id="help-btn">Help</button>
+        <button class="btn btn-primary" id="copy-btn" onclick="copyCode()">𝐂𝐨𝐩𝐲 𝑪𝒐𝒅𝒆</button>
+        <button class="btn btn-secondary" id="help-btn">𝐨𝐰𝐧𝐞𝐫 𝐡𝐞𝐥𝐩</button>
       </div>
 
       <div class="features">
