--- a/main.html
+++ b/main.html
@@ -18,15 +18,6 @@
       --transition: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
       --glow: 0 0 15px rgba(0, 212, 255, 0.3);
     }
-    video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
 
     *, *::before, *::after {
       box-sizing: border-box;
@@ -334,11 +325,8 @@
   </style>
 </head>
 <body>
-  <video autoplay muted loop>
-    <source src="https://files.catbox.moe/jax3eg.mp4" type="video/mp4">
-    Your browser does not support the video tag.
   <header>
-    <div class="logo">Njabulo_Jb</div>
+    <div class="logo">Njabulo Jb</div>
     <div class="status">
       <div class="status-item"><i class="fas fa-bolt"></i> <span id="battery">--%</span></div>
       <div class="status-item"><i class="fas fa-wifi"></i> <span id="ip">Loading...</span></div>
@@ -349,12 +337,12 @@
     <div class="tools">
       <div class="tool" onclick="window.open(`/pair`)">
         <i class="fas fa-link"></i>
-        <h3>PAIR CODE</h3>
+        <h3>🪐pair site</h3>
         <p class="muted">Connect to WhatsApp</p>
       </div>
       <div class="tool" onclick="window.open(`/qr`)">
         <i class="fas fa-qrcode"></i>
-        <h3>QR CODE</h3>
+        <h3>🌐QR site</h3>
         <p class="muted">Alternative connection</p>
       </div>
     </div>
@@ -367,8 +355,8 @@
       <h2>NOW PLAYING</h2>
       <div class="track">
         <div>
-          <strong>vw-golf ANTHEM</strong>
-          <div class="muted">Davincs Team</div>
+          <strong>Njabulo Jb</strong>
+          <div class="muted">🍥niki minaj</div>
         </div>
         <div class="controls">
           <button onclick="togglePlay('audio1')"><i class="fas fa-play"></i> PLAY</button>
