--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     :root {
-      --primary: linear-gradient(135deg, #00d4ff, #7e00ff);
+      --primary: linear-gradient(135deg, #2575fc, #6a11cb);
       --bg: #000000;
       --glass: rgba(255, 255, 255, 0.05);
       --text: #ffffff;
@@ -234,7 +234,7 @@
 
     .progress-fill {
       width: 0%;
-      background: linear-gradient(90deg, #00d4ff, #7e00ff);
+      background: linear-gradient(90deg, #f5f7fa, #c3cfe2);
       height: 100%;
       transition: width 0.1s linear;
       position: relative;
