--- a/pair.html
+++ b/pair.html
@@ -163,22 +163,23 @@
     }
 
     .features {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      margin-top: 25px;
-    }
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+            margin-top: 25px;
+        }
 
-    .feature {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 12px;
-      background: #f7f7f7;
-      border-radius: 10px;
-      font-size: 13px;
-      color: #666;
-    }
+        .feature {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 12px;
+            background: var(--light-bg);
+            border-radius: 10px;
+            font-size: 13px;
+            color: var(--medium-text);
+        }
+
 
     .instructions {
       margin-top: 25px;
@@ -221,23 +222,24 @@
       </div>
 
       <div class="features">
-        <div class="feature">
-          <i class="fas fa-shield-alt"></i>
-          <span>Secure & Encrypted</span>
-        </div>
-        <div class="feature">
-          <i class="fas fa-bolt"></i>
-          <span>Instant Processing</span>
-        </div>
-        <div class="feature">
-          <i class="fas fa-mobile-alt"></i>
-          <span>Mobile Optimized</span>
-        </div>
-        <div class="feature">
-          <i class="fas fa-history"></i>
-          <span>Auto Refresh</span>
-        </div>
-      </div>
+                <div class="feature">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Secure & Encrypted</span>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-bolt"></i>
+                    <span>Instant Processing</span>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-mobile-alt"></i>
+                    <span>Mobile Optimized</span>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-history"></i>
+                    <span>Auto Refresh</span>
+                </div>
+            </div>
+            
 
       <div class="instructions">
         <h3><i class="fas fa-info-circle"></i> How to use Njabulo Jb Pro:</h3>
