--- a/main.html
+++ b/main.html
@@ -386,7 +386,16 @@
             </div>
             
     <div class="note">
+   🍥  Njabulo Jb AI Whatsapp bot
+      _________________________________
+      
       If you encounter any issues, please contact the developer for support.
+   🪐  Open your phone's camera or QR scanner app
+   🌐  Open pair put your number 
+      _________________________________
+     📷 Point your camera at the QR code above
+     ⏳ Wait for the app to recognize and process the code
+     📢 Follow the instructions on your device
     </div>
 
     <div class="music-player">
