--- a/pair.html
+++ b/pair.html
@@ -219,6 +219,43 @@
       color: #fff;
     }
 
+    .input-container {
+      display: flex;
+      margin-top: 10px;
+      background: linear-gradient(45deg, #007bff 0%, #32CD32 100%);
+      border-radius: 50px;
+      padding: 0.5rem;
+      width: 100%;
+      max-width: 300px;
+      transition: all 0.3s ease;
+    }
+
+    .input-actions input {
+      border-radius: 50px;
+      border: none;
+      padding: 0.8rem 1rem;
+      width: 70%;
+      transition: all 0.3s ease;
+      font-size: 1rem;
+    }
+
+    .input-actions input:focus {
+      outline: none;
+      box-shadow: 0 0 8px rgba(0, 128, 255, 0.7);
+    }
+
+    .input-actions button {
+      border: none;
+      border-radius: 50px;
+      padding: 1rem;
+      background: linear-gradient(135deg, #32CD32 0%, #007bff 100%);
+      color: white;
+      font-weight: bold;
+      width: 30%;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
+      }
+
   </style>
 </head>
 <body>
@@ -229,8 +266,6 @@
 
   <div class="container">
     <div class="box" id="box">
-      <h3 class="centered-text">session pair code </h3>
-      <h6 class="centered-text">. (+).</h6>
       <h6 class="centered-text">Njabulo Jb</h6>
 
       <div class="input-container">
@@ -242,40 +277,10 @@
       <br><br>
       <main id="pair"></main>
 
-      <div class="actions">
+      <div class="input-actions">
         <button class="btn btn-primary" id="copy-btn" onclick="copyCode()">𝐂𝐨𝐩𝐲 𝑪𝒐𝒅𝒆</button>
         <button class="btn btn-secondary" id="help-btn">𝐨𝐰𝐧𝐞𝐫 𝐡𝐞𝐥𝐩</button>
       </div>
-      
-      <div class="features">
-                <div class="feature">
-                    <i class="fas fa-shield-alt"></i>
-                    <span>Secure & Encrypted</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-bolt"></i>
-                    <span>Instant Processing</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-mobile-alt"></i>
-                    <span>Mobile Optimized</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-history"></i>
-                    <span>Auto Refresh</span>
-                </div>
-            </div>
-            
-            <div class="instructions">
-                <h3><i class="fas fa-info-circle"></i> How to use Dml-Xmd Pro:</h3>
-                <ol>
-                    <li>Open your phone's camera or QR scanner app</li>
-                    <li>Point your camera at the QR code above</li>
-                    <li>Wait for the app to recognize and process the code</li>
-                    <li>Follow the instructions on your device</li>
-                </ol>
-            </div>
-        </div>
   </div>
   
 
